Fixed overlapping placeholder by making input 100% width only on IE 11, closes #1301

--- a/frontend/src/assets/scss/_custom.scss
+++ b/frontend/src/assets/scss/_custom.scss
@@ -1817,10 +1817,12 @@ body.aside-menu-off-canvas .aside-menu {
   cursor: pointer;
 }
 
-
-.multiselect {
-  .multiselect__input {
-    width: auto!important;
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  /* IE10+ CSS styles go here */
+  .multiselect {
+    .multiselect__input {
+      width: 100% !important;
+    }
   }
 }
 
